# stock_market_state

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  app.js  index.html  pyproject.toml  style.css
.github/workflows/: update_data.yml
.scratch/market-dashboard/issues/: 01-core-shell-and-vix.md  02-macro-yields.md  04-market-breadth.md  05-sentiment-scrapes.md  (+1 more)
.scratch/phase2-health-scorecard/: PRD.md
data/: market_data.json
docs/: DesignDoc.md  DesignDoc_SaP500_Health.md  PRD.md
docs/adr/: 0001-api-keys-with-layered-fallback.md
issues/: 01-core-shell-and-vix.md  02-macro-yields.md  03-economic-credit-internals.md  06-composite-regime-index.md  07-pipeline-automation.md  08-fred-api-fallback.md  09-sp500-trend-momentum.md  10-sp500-ad-line-highs-lows.md  11-equal-vs-cap-weight.md  12-sector-leadership-heatmap.md  14-valuation-pe-cape.md  16-ui-tab-reorganization.md
issues/done/: 03-economic-credit-internals.md  04-market-breadth.md  05-sentiment-scrapes.md  07-pipeline-automation.md  08-fred-api-fallback.md  09-sp500-trend-momentum.md  10-sp500-ad-line-highs-lows.md  11-equal-vs-cap-weight.md  12-sector-leadership-heatmap.md  13-sp500-earnings-fmp.md  15-fred-liquidity-credit.md  17-health-scorecard-hero.md
ralph/: once.ps1  once.sh  prompt.md
scripts/: update_data.py
scripts/pipeline/: __init__.py  config.py  fallback.py  indicators.py  regime.py  registry.py  scorecard.py
tests/: test_breadth.py  test_fallback.py  test_fmp_earnings.py  test_fred.py  test_regime.py  test_scorecard.py  test_sentiment.py  test_valuation_pe_cape.py
(+5 files in other folders)
