[tool.poetry]
name = "stock-market-state"
version = "0.1.0"
description = "A clean, modern, high-level dashboard of the stock market based on key indicators"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.40"
pandas = "^2.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
